# Enterprize_MM

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  OPERATIONS.md
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/components/: HelpContent.tsx  RunTimeline.tsx  ScenarioCard.tsx  Tooltip.tsx
frontend/hooks/: useRunStream.ts
frontend/lib/: analytics.ts  api.ts  types.ts
infra/helm/market-magic/: Chart.yaml  values.yaml
infra/terraform/: README.md  main.tf  variables.tf
ops/: README.md
services/api/: .env.example  Dockerfile  requirements.txt
services/api/app/: dependencies.py  main.py  schemas.py
services/api/tests/: __init__.py  test_api.py
services/ingestion/: Dockerfile  requirements.txt
services/ingestion/tests/: __init__.py  test_flows.py  test_imports.py
services/modeling/: Dockerfile  pyproject.toml
services/modeling/modeling/: data.py  train.py
services/modeling/modeling/scenarios/: __init__.py  base.py  earnings_momentum.py  placeholders.py  quant_factor.py  runner.py  trend_strength.py
services/modeling/tests/: test_features.py  test_scenarios.py
services/orchestration/: Dockerfile  requirements.txt
services/orchestration/app/: __init__.py  catalog.py  config.py  (+8 more)
services/serving/: .env.example  Dockerfile
sql-scripts/: create_schema.sql  old_create_schema.sql
(+16 files in other folders)
