[tool.poetry]
name = "market-magic-modeling"
version = "0.1.0"
description = "Modeling service"
authors = ["Market Magic"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
scikit-learn = "*"
sqlalchemy = "^2.0"
psycopg = {extras=["binary"], version="^3.1"}
mlflow = "^2.14.1"
pydantic = "^2.7"
hydra-core = "^1.3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
